--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,6 +1,24 @@
 :root {
 }
 
+@font-face {
+  font-family: "GT Walsheim Pro";
+  src: url(../fonts/GT/GTWalsheimProRegular.woff2) format("woff2"),
+    url(../fonts/GT/GTWalsheimProRegular.woff) format("woff"),
+    url(../fonts/GT/GTWalsheimProRegular.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GT Walsheim Pro";
+  src: url(../fonts/GT/GTWalsheimProBold.woff2) format("woff2"),
+    url(../fonts/GT/GTWalsheimProBold.woff) format("woff"),
+    url(../fonts/GT/GTWalsheimProBold.ttf) format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 html,
 body {
   height: 100%;
@@ -10,6 +28,7 @@ body {
   background: #141414;
   color: #fff;
   font-size: 16px;
+  font-family: "GT Walsheim Pro";
 }
 
 img {
@@ -18,13 +37,13 @@ img {
 
 .product img {
   width: 100%;
-  height: 400px;
+  height: 240px;
   object-fit: contain;
   background: #fff;
   padding: 20px;
-  border-radius: 8px;
-  margin-bottom: 10px;
   display: block;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 a {
@@ -34,21 +53,130 @@ a {
 }
 
 section {
-  padding: 60px 0;
+  padding: 80px 0;
 }
 
 .navbar-nav a {
-  color: #000;
+  color: #fff;
   padding: 5px 25px;
+  font-weight: 500;
+  font-size: 20px;
+  transition: 0.4s all ease;
 }
 
-.cart--product {
-  display: grid;
-  justify-content: space-between;
-  grid-template-columns: 33% 33% 33%;
-  gap: 40px;
+.navbar-nav a:hover {
+  text-decoration: underline;
 }
 
 .cart--product img {
-  width: 60px;
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  background: #fff;
+  padding: 10px;
+}
+
+.bigger-container {
+  max-width: 95%;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.product .info {
+  background: #202020;
+  padding: 20px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  min-height: 130px;
+}
+
+.shop--btn {
+  background: none;
+  color: #fff;
+  border: none;
+  padding: 0;
+}
+
+.product .price {
+  color: #ccc;
+}
+
+footer {
+  background: #202020;
+}
+
+footer p {
+  font-size: 15px;
+}
+
+.single--product img {
+  height: 400px;
+  width: 100%;
+  object-fit: contain;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.single--product .shop--btn {
+  font-size: 25px;
+}
+
+.home img {
+  height: 94vh;
+  object-fit: cover;
+  width: 100%;
+  object-position: top;
+  background: #fff;
+}
+
+.loading {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header {
+  position: absolute;
+  width: 100%;
+  z-index: 999;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: none;
+  text-align: left;
+  padding: 8px;
+}
+
+.cart,
+.single--product {
+  min-height: 100vh;
+}
+
+.single--product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cart--product {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+
+.trash {
+  background: none;
+  border: none;
+  margin-right: 10px;
 }
