--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -180,3 +180,22 @@ th {
   border: none;
   margin-right: 10px;
 }
+
+input[name="quantity"],
+.handle {
+  width: 45px;
+  text-align: center;
+  border-radius: 5px;
+  border: none;
+  height: 40px;
+  margin-right: 5px;
+}
+
+.handle {
+  transition: 0.4s all ease;
+}
+
+.handle:hover {
+  background: orangered;
+  color: #fff;
+}
